# biopython-tutorial

./: Makefile  README.md  pyproject.toml  pytest.ini  tasks.py
.github/workflows/: python-test.yml
biopython_tutorial/: __init__.py  utils.py  version.py
notebooks/: biopython-tutorial-chapter-2.ipynb
tests/: test_biopython_tutorial.py
